--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Estudos sobre node e typescript na construcao de api rest",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node-dev ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Leonardo Vizagre",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
