--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Leonardo Vizagre",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0"
   },
